--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,15 @@
   text-align: center;
 }
 
+
+
 body{
 	margin: 0;
 	padding: 0;
-	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	font-family: 'Baloo' sans-serif;
 background-color: rgb(221, 221, 221);
 }
+
 p{
 	text-align: center;
 	margin: 2em;
@@ -25,6 +28,7 @@ ul{
 ul li{
 	list-style: none;
 	padding: 10px 20px;
+  margin-left: 0%;
 }
 ul li a{
 	text-decoration: none;
@@ -63,4 +67,146 @@ ul li a::after{
 ul li:hover a::after{
 	width: 50%;
 	transform: translateX(10%);
+}
+
+
+.cases{
+  border-bottom:1px solid #333333;
+  font-size: 100%; 
+  margin-left: 20%;
+  
+  margin-bottom: 2.5%;
+  color: #ffffff;
+  background: #589dd1;
+  height: 160px;
+  width: 1100px;
+  min-width: 30px;
+  border-radius: 25px;
+}
+
+.Confirmed{
+  color: #e9e9e9;
+  
+}
+.Recovered{
+  color:#e9e9e9;
+  
+}
+  
+.Deaths{
+  color:#e9e9e9;
+  ; 
+}
+
+#left {
+  float:left; 
+ 
+  width:33%;
+  height:280px;
+}
+#center{
+  float:left; 
+  
+  width:33%;
+  height:280px;
+}
+#right{
+  float:right;
+
+  width:33%;
+  height:280px;
+}
+
+.news-item{
+  width:500px;
+  padding: 20px;
+  border: 25px;
+  margin-bottom: 20px;
+}
+
+.news-img{
+  width: 400px
+}
+
+div.contentContainer{
+  font-family: 'Baloo', sans-serif;
+  list-style-type: none;
+  width: 400;
+  margin-left: 35%;
+  margin-right: 34%;
+  margin-bottom: 2.5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20;
+  border-style: ridge;
+  border-color: #747474;
+  border-radius: 25px;
+}
+div.contentContainer p{
+  margin-left: 60%;
+}
+
+
+div.Buttons{
+margin-left:30%;
+height:2%;
+}
+
+div.FormInput{
+  margin-left:40%;
+  
+}
+
+h3{
+  margin-left:40%;
+  margin-top: 1%;
+}
+
+
+div.FormInput.TextField{
+  width: 50px;
+  margin-left: 35%;
+}
+
+h2{
+  font-family: 'Baloo';
+  margin-left:40%;
+  margin-top: 1%;
+}
+
+
+
+h4{
+  font-family: 'Baloo';
+}
+
+div.Post-content{
+  font-family: 'Baloo', sans-serif;
+  list-style-type: none;
+}
+
+div.Post-content TextField{
+  margin-left: 35%;
+}
+
+div.AddPostInput{
+  margin-left:44%;
+  margin-top: 1%;
+  
+}
+
+div.postHeading{
+  list-style-type: none;
+  width: 400;
+  margin-left: 35%;
+  margin-right: 34%;
+  margin-bottom: 2.5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20;
+  border-style: ridge;
+  border-color: #747474;
+  border-radius: 25px;
 }
